// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventDeleteConfirmation /> #render() still matches snapshot 1`] = `
<DeleteConfirmationDialog
  dialogTitle={
    <FormattedMessage
      defaultMessage="Delete Event"
      id="app.Event.components.EventDeleteConfirmation.title"
    />
  }
  headlineText={
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this {typeName} event?"
      id="app.Event.components.EventDeleteConfirmation.text"
      values={
        Object {
          "typeName": "Coming Soon",
        }
      }
    />
  }
  headlineTitle={
    <FormattedMessage
      defaultMessage="You are about to delete an event"
      id="app.Event.components.EventDeleteConfirmation.headlineWithoutEventName"
    />
  }
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  open={false}
/>
`;

exports[`<EventDeleteConfirmation /> #render() still matches snapshot with name 1`] = `
<DeleteConfirmationDialog
  dialogTitle={
    <FormattedMessage
      defaultMessage="Delete Event"
      id="app.Event.components.EventDeleteConfirmation.title"
    />
  }
  headlineText={
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this {typeName} event?"
      id="app.Event.components.EventDeleteConfirmation.text"
      values={
        Object {
          "typeName": "Coming Soon",
        }
      }
    />
  }
  headlineTitle={
    <WithStyles(GridContainer)
      alignItems="center"
      direction="column"
      spacing={0}
    >
      <WithStyles(GridItem)>
        <FormattedMessage
          defaultMessage="You are about to delete:"
          id="app.Event.components.EventDeleteConfirmation.headlineWithEventName"
        />
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        Some name
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  }
  onCancel={[MockFunction]}
  onConfirm={[MockFunction]}
  open={false}
/>
`;
